<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:rowCount="2"
        android:columnCount="3">

        <TextView
            android:id="@+id/tvCoupon"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/color_white"
            android:text="@string/string_my_coupon"
            android:drawableTop="@drawable/icon_coupon"
            android:drawablePadding="10dp"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:id="@+id/tvOrder"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/color_white"
            android:text="@string/string_my_order"
            android:drawableTop="@drawable/icon_order"
            android:drawablePadding="10dp"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:id="@+id/tvLoc"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/color_white"
            android:text="@string/string_my_loc"
            android:drawableTop="@drawable/icon_loc"
            android:drawablePadding="10dp"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:id="@+id/tvMsg"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/color_white"
            android:text="@string/string_my_msg"
            android:drawableTop="@drawable/icon_msg"
            android:drawablePadding="10dp"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:id="@+id/tvFootprint"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/color_white"
            android:text="@string/string_my_footprint"
            android:drawableTop="@drawable/icon_footprint"
            android:drawablePadding="10dp"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:id="@+id/tvInvitation"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/color_white"
            android:text="@string/string_my_invitation"
            android:drawableTop="@drawable/icon_invitation"
            android:drawablePadding="10dp"
            android:layout_gravity="fill"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_large"/>

    </GridLayout>
    
</layout>